add tab for opend pages.

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title>login page</title>
     <link rel="stylesheet" type="text/css" href="public/css/login.css"/>
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="public/javascript/index.js"></script>
+    <script type="text/javascript" src="public/javascript/login.js"></script>
 </head>
 <body>
     <!-- <form action="index.html" class="loginform"> -->
