--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     </header>
     <section id="left_part">
         <div class="show_iframe">
-            <iframe id="ifame_leftmenu" name="ifame_leftmenu" src="left_menu_datacount.html" width="100%" height="100%"></iframe>
+            <iframe class="ifame_leftmenu" name="ifame_leftmenu" src="left_menu_datacount.html" width="100%" height="100%"></iframe>
         </div>
     </section>
     <section id="right_part">
         <div id="displayArrow" class="open"><div class="displayWraper"><span class="displayContent"></span></div></div>
         <div class="tabbed round">
             <ul>
-                <li class='active'><span>主页</span></li>
-                <li><span>实时数据</span></li>
-                <li><span>实时充值</span></li>
-                <li><span>用户数据数据数据</span></li>
+                <!-- <li><span class="title" page_href="welcome.html">主页</span><span class="close"><span></li>
+                <li><span class="title" page_href="real_time_data.html">实时数据</span><span class="close"><span></li>
+                <li><span class="title" page_href="real_time_charge.html">实时充值</span><span class="close"><span></li> -->
+                <!-- <li class='active' page_href="real_time_user.html"><span>用户数据</span></li> -->
             </ul>
         </div>
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
-            <iframe id="iframe_content" name="iframe_content" src="welcome.html" width="100%" height="100%"></iframe>
+            <iframe class="iframe_content" name="iframe_content" width="100%" height="100%"></iframe>
         </div>
     </section>
 </body>
