--- a/left_menu_datacount.html
+++ b/left_menu_datacount.html
@@ -5,7 +5,7 @@
     <title>left menu datacount page</title>
     <link rel="stylesheet" type="text/css" href="public/css/left_menu.css">
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="public/javascript/index.js"></script>
+    <script type="text/javascript" src="public/javascript/leftmenu.js"></script>
 </head>
 <body>
     <aside>
@@ -23,8 +23,8 @@
                     <label for="section-1"><span>实时数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-inbox"></i><a href="welcome.html" target="iframe_content">实时在线</a></li>
-                            <li><i class="fa fa-share"></i><span>实时充值</span></li>
+                            <li><i class="fa fa-inbox"></i><a _href="real_time_data.html" page_title="实时在线" href="javascript:void(0);" target="iframe_content">实时在线</a></li>
+                            <li><i class="fa fa-share"></i><a _href="real_time_charge.html" page_title="实时充值" href="javascript:void(0);" target="iframe_content">实时充值</a></li>
                             <li><i class="fa fa-archive"></i><span>实时渠道统计</span></li>
                         </ul>
                     </div>
