--- a/left_menu_datacount.html
+++ b/left_menu_datacount.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="public/css/left_menu.css">
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="public/javascript/leftmenu.js"></script>
+    <style type="text/css">
+    body {font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;}
+    </style>
 </head>
 <body>
     <aside>
