add home page and click on it.
增加了home.html，home页上是一些系统中涉及词汇的解释。

--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="public/javascript/login.js"></script>
 </head>
 <body>
-    <!-- <form action="index.html" class="loginform"> -->
-    <form method="post" class="loginform">
+    <form action="index.html" class="loginform">
+    <!-- <form method="post" class="loginform"> -->
         <h1>WCA 游戏管理平台</h1>
         <input type="text" name="username" class="login-input username" placeholder="Your accout" autofocus>
         <input type="password" name="password" class="login-input userpwd" placeholder="Password">
