--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="headerNav">
             <nav>
                 <ul class="nav">
-                    <li class="active"><a href="#" class="nav-icon" title="Home"><span class="icon-home">Home</span></a></li>
+                    <li class="nav_home active"><a _href="home.html" page_title="我的主页" class="nav-icon" href="javascript:void(0);" title="Home"><span class="icon-home">Home</span></a></li>
                     <li><a href="left_menu_datacount.html" target="ifame_leftmenu">数据统计</a></li>
                     <li><a href="#">GM工具</a></li>
                     <li><a href="#">财务统计</a></li>
@@ -24,10 +24,11 @@
             <span>WCA游戏平台后台管理系统</span>
         </div>
         <div id="userInfo">
-            <ul>
-                <li id="user_welcome">您好：</li>
-                <li><a href="#">注销</a></li>
-            </ul>
+            <div class="wraper">
+                <span>您好:</span>
+                <span class="userLoginName"></span>
+                <a href="login.html">[注销]</a>
+            </div>
         </div>
     </header>
     <section id="left_part">
@@ -39,15 +40,13 @@
         <div id="displayArrow" class="open"><div class="displayWraper"><span class="displayContent"></span></div></div>
         <div class="tabbed round">
             <ul>
-                <!-- <li><span class="title" page_href="welcome.html">主页</span><span class="close"><span></li>
-                <li><span class="title" page_href="real_time_data.html">实时数据</span><span class="close"><span></li>
-                <li><span class="title" page_href="real_time_charge.html">实时充值</span><span class="close"><span></li> -->
-                <!-- <li class='active' page_href="real_time_user.html"><span>用户数据</span></li> -->
+                <li class="active"><span class="title" page_href="home.html">我的主页</span></li>
+                <!-- <li><span class="title" page_href="real_time_data.html">实时数据</span><span class="close"><span></li>-->
             </ul>
         </div>
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
-            <iframe class="iframe_content" name="iframe_content" width="100%" height="100%"></iframe>
+            <iframe class="iframe_content" src="home.html" name="iframe_content" width="100%" height="100%"></iframe>
         </div>
     </section>
 </body>
