add real_time chart for each room
为每一个房间的状态增加实时图。

--- a/home.html
+++ b/home.html
@@ -17,40 +17,19 @@
         <div class="left">
             <div class="box table">
                 <div class="table_title"><span>1、IDP功能</span></div>
-                <table id="table1" class="dataTable display cell-border" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>名词</th>
-                            <th>定义</th>
-                        </tr>
-                    </thead>
-                </table>
+                <table id="table1" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
             </div>
             <div class="box table">
                 <div class="table_title"><span>2、用户主线</span></div>
-                <table id="table2" class="dataTable display cell-border" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>名词</th>
-                            <th>定义</th>
-                        </tr>
-                    </thead>
-                </table>
+                <table id="table2" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
             </div>
             <div class="box table">
                 <div class="table_title"><span>3、基本定义</span></div>
-                <table id="table3" class="dataTable display cell-border" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>名词</th>
-                            <th>定义</th>
-                        </tr>
-                    </thead>
-                </table>
+                <table id="table3" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
             </div>
         </div>
     </div> 
-    <div class="right">
+    <!-- <div class="right">
         <div class="clock">
             <svg version="1.1" id="clock" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  width="300px" height="300px" viewBox="94.257 101.184 300 300" enable-background="new 94.257 101.184 300 300"
@@ -204,6 +183,6 @@
             <p>IDP V1.0</p>
             <p>2016 WCA</p>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
