--- a/left_menu_datacount.html
+++ b/left_menu_datacount.html
@@ -26,7 +26,7 @@
                     <label for="section-1"><span>实时数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-inbox"></i><a _href="real_time_data.html" page_title="实时在线" href="javascript:void(0);" target="iframe_content">实时在线</a></li>
+                            <li><i class="fa fa-inbox"></i><a _href="real_time_online_user.html" page_title="实时在线" href="javascript:void(0);" target="iframe_content">实时在线</a></li>
                             <li><i class="fa fa-share"></i><a _href="real_time_charge.html" page_title="实时充值" href="javascript:void(0);" target="iframe_content">实时充值</a></li>
                             <li><i class="fa fa-archive"></i><span>实时渠道统计</span></li>
                         </ul>
