--- a/real_time_online_user.html
+++ b/real_time_online_user.html
@@ -6,14 +6,15 @@
     <title>welcome</title>
     <script type="text/javascript" src="public/lib/My97DatePicker/WdatePicker.js"></script>
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/modules/exporting.js"></script>
+    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/modules/exporting.js"></script> -->
     <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/highcharts.js"></script>
-    <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/heatmap.js"></script>
+    <!-- // <script type="text/javascript" src="http://code.highcharts.com/3.0.7/highcharts.js"></script> -->
+    <!-- // <script type="text/javascript" src="public/lib/Highcharts-4.2.1/js/heatmap.js"></script> -->
     <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
     <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
     <link rel="stylesheet" type="text/css" href="public/css/content.css">
-    <script src="public/javascript/contest.js"></script>
+    
 </head>
 
 <body>
@@ -60,43 +61,21 @@
             </div>
         </div>
         <div class="box chart_box">
+            <div class="chart_title"><span>总图形展示</span></div>
             <div id="container1"></div>
         </div>
-        <div class="box table_box">
-            <table id="example" class="dataTable display cell-border" cellspacing="0" width="100%">
-                <thead>
-                    <!-- <tr>
-                        <th>name</th>
-                        <th>position</th>
-                        <th>salary</th>
-                        <th>start_date</th>
-                        <th>office</th>
-                        <th>extn</th>
-                    </tr> -->
-                </thead>
-                <!-- <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                </tr>
-            </thead>
-            <tfoot>
-                <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                </tr>
-            </tfoot> -->
-            </table>
+
+        <div class="box chart_box">
+            <div class="chart_title"><span>按照房间统计</span></div>
+            <div id="container2"></div>
+        </div>
+
+        <div class="box">
+            <div class="chart_title"><span>查询结果</span></div>
+            <table id="example" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
         </div>
     </div>
+    <script src="public/javascript/contest.js"></script>
 </body>
 
 </html>
