--- a/left_menu_datacount.html
+++ b/left_menu_datacount.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <aside>
-        <section id="leftmenu_container">
+        <!-- <section id="leftmenu_container">
             <ul class="pagination">
                 <li for="accordion_ddz" class="active">斗地主</li>
                 <li for="accordion_dz">德州</li>
                 <li for="accordion_xq">象棋</li>
             </ul>
-        </section>
+        </section> -->
         <div class="accordion">
             <div class="accordion_ddz">
                 <div class="section">
@@ -26,9 +26,9 @@
                     <label for="section-1"><span>实时数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-inbox"></i><a _href="real_time_online_user.html" page_title="实时在线" href="javascript:void(0);" target="iframe_content">实时在线</a></li>
-                            <li><i class="fa fa-share"></i><a _href="real_time_charge.html" page_title="实时充值" href="javascript:void(0);" target="iframe_content">实时充值</a></li>
-                            <li><i class="fa fa-archive"></i><span>实时渠道统计</span></li>
+                            <li><a _href="real_time_online_user.html" page_title="实时在线" href="javascript:void(0);" target="iframe_content">实时在线</a></li>
+                            <li><a _href="real_time_charge.html" page_title="实时充值" href="javascript:void(0);" target="iframe_content">实时充值</a></li>
+                            <li><a _href="real_time_channel.html" page_title="渠道统计" href="javascript:void(0);" target="iframe_content">实时渠道统计</a></li>
                         </ul>
                     </div>
                 </div>
@@ -37,10 +37,10 @@
                     <label for="section-2"><span>汇总数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-cog"></i><span>总计数据</span></li>
-                            <li><i class="fa fa-group"></i><span>用户数据</span></li>
-                            <li><i class="fa fa-sitemap"></i><span>周数据统计</span></li>
-                            <li><i class="fa fa-sitemap"></i><span>月数据统计</span></li>
+                            <li><a _href="summary_data.html" page_title="总计数据" href="javascript:void(0);" target="iframe_content">总计数据</a></li>
+                            <li><a _href="user_data.html" page_title="用户数据" href="javascript:void(0);" target="iframe_content">用户数据</a></li>
+                            <li><a _href="week_data_count.html" page_title="周数据统计" href="javascript:void(0);" target="iframe_content">周数据统计</a></li>
+                            <li><a _href="month_data_count.html" page_title="月数据统计" href="javascript:void(0);" target="iframe_content">月数据统计</a></li>
                         </ul>
                     </div>
                 </div>
@@ -49,14 +49,14 @@
                     <label for="section-3"><span>金币数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-coffee"></i><span>金币总计</span></li>
-                            <li><i class="fa fa-coffee"></i><span>每日新增金币</span></li>
-                            <li><i class="fa fa-coffee"></i><span>每日消耗金币</span></li>
-                            <li><i class="fa fa-coffee"></i><span>金币剩余排行</span></li>
-                            <li><i class="fa fa-coffee"></i><span>金币增加排行</span></li>
-                            <li><i class="fa fa-coffee"></i><span>金币减少排行</span></li>
-                            <li><i class="fa fa-coffee"></i><span>金币详情统计排行</span></li>
-                            <li><i class="fa fa-coffee"></i><span>金币详情统计排行</span></li>
+                            <li><a _href="coin_count.html" page_title="金币总计" href="javascript:void(0);" target="iframe_content">金币总计</a></li>
+                            <li><a _href="coin_day_add.html" page_title="每日新增金币" href="javascript:void(0);" target="iframe_content">每日新增金币</a></li>
+                            <li><a _href="coin_day_consume.html" page_title="每日消耗金币" href="javascript:void(0);" target="iframe_content">每日消耗金币</a></li>
+                            <li><a _href="coin_left_rank.html" page_title="金币剩余排行" href="javascript:void(0);" target="iframe_content">金币剩余排行</a></li>
+                            <li><a _href="coin_add_rank.html" page_title="金币增加排行" href="javascript:void(0);" target="iframe_content">金币增加排行</a></li>
+                            <li><a _href="coin_reduce_rank.html" page_title="金币减少排行" href="javascript:void(0);" target="iframe_content">金币减少排行</a></li>
+                            <li><a _href="coin_details_count.html" page_title="金币详情统计排行" href="javascript:void(0);" target="iframe_content">金币详情统计排行</a></li>
+                            <li><a _href="coin_event_count.html" page_title="金币事件汇总" href="javascript:void(0);" target="iframe_content">金币事件汇总</a></li>
                         </ul>
                     </div>
                 </div>
@@ -65,17 +65,16 @@
                     <label for="section-4"><span>充值数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-coffee"></i><span>充值数据汇总</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值数据汇总</span></li>
-                            <li><i class="fa fa-coffee"></i><span>渠道统计</span></li>
-                            <li><i class="fa fa-coffee"></i><span>详细渠道统计</span></li>
-                            <li><i class="fa fa-coffee"></i><span>商品购买统计详情</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值渠道统计</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值渠道统计</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值排行(日)</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值排行(周)</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值排行(月)</span></li>
-                            <li><i class="fa fa-coffee"></i><span>充值排行</span></li>
+                            <li><a _href="charge_data_count.html" page_title="充值数据汇总" href="javascript:void(0);" target="iframe_content">充值数据汇总</a></li>
+                            <li><a _href="channel_count.html" page_title="渠道统计" href="javascript:void(0);" target="iframe_content">渠道统计</a></li>
+                            <li><a _href="channel_details_count.html" page_title="详细渠道统计" href="javascript:void(0);" target="iframe_content">详细渠道统计</a></li>
+                            <li><a _href="goods_sales_details.html" page_title="商品销售统计详情" href="javascript:void(0);" target="iframe_content">商品销售统计详情</a></li>
+                            <li><a _href="goods_purchase_details.html" page_title="商品购买统计详情" href="javascript:void(0);" target="iframe_content">商品购买统计详情</a></li>
+                            <li><a _href="charge_channel_count.html" page_title="充值渠道统计" href="javascript:void(0);" target="iframe_content">充值渠道统计</a></li>
+                            <li><a _href="charge_day_rank.html" page_title="充值排行(日)" href="javascript:void(0);" target="iframe_content">充值排行(日)</a></li>
+                            <li><a _href="charge_week_rank.html" page_title="充值排行(周)" href="javascript:void(0);" target="iframe_content">充值排行(周)</a></li>
+                            <li><a _href="charge_month_rank.html" page_title="充值排行(月)" href="javascript:void(0);" target="iframe_content">充值排行(月)</a></li>
+                            <li><a _href="charge_rank.html" page_title="充值排行" href="javascript:void(0);" target="iframe_content">充值排行</a></li>
                         </ul>
                     </div>
                 </div>
@@ -84,19 +83,7 @@
                     <label for="section-5"><span>存留数据</span></label>
                     <div class="content">
                         <ul>
-                            <li><i class="fa fa-coffee"></i><span>新增用户留存</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="section">
-                    <input type="radio" name="accordion-1" id="section-6"/>
-                    <label for="section-6"><span>财务统计</span></label>
-                    <div class="content">
-                        <ul>
-                            <li><i class="fa fa-coffee"></i><span>推广渠道汇总</span></li>
-                            <li><i class="fa fa-coffee"></i><span>推广渠道明细</span></li>
-                            <li><i class="fa fa-coffee"></i><span>总计汇总</span></li>
-                            <li><i class="fa fa-coffee"></i><span>道具统计</span></li>
+                            <li><a _href="user_newer_persistence.html" page_title="新增用户留存" href="javascript:void(0);" target="iframe_content">新增用户留存</a></li>
                         </ul>
                     </div>
                 </div>
