--- a/home.html
+++ b/home.html
@@ -6,27 +6,25 @@
     <!-- <link rel="stylesheet" type="text/css" href="public/css/home.css"/> -->
     <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
     <link rel="stylesheet" type="text/css" href="public/lib/DataTables-1.10.10/media/css/jquery.dataTables.min.css" />
-    <link rel="stylesheet" type="text/css" href="public/css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="public/css/content.css"/>
     <link rel="stylesheet" type="text/css" href="public/css/table_style.css" />
     <script type="text/javascript" src="public/lib/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="public/javascript/home.js"></script>
     
 </head>
 <body>
-    <div class="wraper">
-        <div class="left">
-            <div class="box table">
-                <div class="table_title"><span>1、IDP功能</span></div>
-                <table id="table1" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
-            </div>
-            <div class="box table">
-                <div class="table_title"><span>2、用户主线</span></div>
-                <table id="table2" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
-            </div>
-            <div class="box table">
-                <div class="table_title"><span>3、基本定义</span></div>
-                <table id="table3" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
-            </div>
+    <div id="wraper">
+        <div class="box table">
+            <div class="chart_title"><span>1、IDP功能</span></div>
+            <table id="table1" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
+        </div>
+        <div class="box table">
+            <div class="chart_title"><span>2、用户主线</span></div>
+            <table id="table2" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
+        </div>
+        <div class="box table">
+            <div class="chart_title"><span>3、基本定义</span></div>
+            <table id="table3" class="dataTable display cell-border" cellspacing="0" width="100%"></table>
         </div>
     </div> 
     <!-- <div class="right">
