--- a/index.html
+++ b/index.html
@@ -38,22 +38,30 @@
     </section>
     <section id="right_part">
         <div id="displayArrow" class="open"><div class="displayWraper"><span class="displayContent" title="点击隐藏"></span></div></div>
-        <div class="tabbed round">
+        <div class="tab_box">
+            <div class="tab_wraper">
+                <div class="tabbed round">
+                    <ul>
+                        <li class="active"><span class="title" page_href="home.html">我的主页</span></li>
+                        <!-- <li><span class="title" page_href="real_time_data.html">实时数据</span><span class="close"><span></li>-->
+                    </ul>
+                </div>
+                <div class="arrow_box">
+                    <div class="arrow_wraper">
+                        <div class="arrow"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="more_tab">
             <ul>
-                <li class="active"><span class="title" page_href="home.html">我的主页</span></li>
-                <!-- <li><span class="title" page_href="real_time_data.html">实时数据</span><span class="close"><span></li>-->
+                <li><a href="#" rel="1">长沙</a></li>
+                <li><a href="#" rel="2">北京</a></li>
+                <li><a href="#" rel="3">南京</a></li>
+                <li><a href="#" rel="4">堪培拉</a></li>
+                <li><a href="#" rel="5">多伦多</a></li>
             </ul>
         </div>
-       <!--  <div id="dropdown">
-          <p>请选择城市</p>
-          <ul>
-             <li><a href="#" rel="1">长沙</a></li>
-             <li><a href="#" rel="2">北京</a></li>
-             <li><a href="#" rel="3">南京</a></li>
-             <li><a href="#" rel="4">堪培拉</a></li>
-             <li><a href="#" rel="5">多伦多</a></li>
-          </ul>
-        </div> -->
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
             <iframe class="iframe_content" src="home.html" name="iframe_content" width="100%" height="100%" frameborder="0" ></iframe>
