enhance function for page tab.
增强了打开页面标签的功能，包括：当标签长度超过页面宽度时，会以下拉箭头的形式进行展示；当关闭了足够多的页面时，会隐藏下拉箭头；当页面大小发生变化时，相应的也会显示和隐藏的页面标签。

--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
         </div>
         <div class="more_tab">
             <ul>
-                <li><a href="#" rel="1">长沙</a></li>
-                <li><a href="#" rel="2">北京</a></li>
-                <li><a href="#" rel="3">南京</a></li>
-                <li><a href="#" rel="4">堪培拉</a></li>
-                <li><a href="#" rel="5">多伦多</a></li>
+                <!-- <li class="active"><span class="title" page_href="home.html">我的主页</span><span class="close"></span></li>
+                <li class="active"><span class="title" page_href="home.html">我的主页</span><span class="close"></span></li>
+                <li class="active"><span class="title" page_href="home.html">我的主页</span><span class="close"></span></li> -->
             </ul>
         </div>
         <div class="show_iframe">
